# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/shorten": {
+        "/api/v1/urls": {
             "post": {
                 "description": "Shortens a given URL and provides an expiration time.",
                 "consumes": [
@@ -102,10 +102,12 @@
             ],
             "properties": {
                 "expireAt": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2021-02-08T09:20:41Z"
                 },
                 "url": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://example.com"
                 }
             }
         },
@@ -113,10 +115,12 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "5abcABC"
                 },
                 "shortURL": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://localhost/5abcABC"
                 }
             }
         }
